--- a/BioMFA_Mobile/app/src/main/AndroidManifest.xml
+++ b/BioMFA_Mobile/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BioMFA"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -21,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".InfoActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
