Logo, style fix and scan RFID activity

--- a/BioMFA_Mobile/app/src/main/AndroidManifest.xml
+++ b/BioMFA_Mobile/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/biomfa_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/biomfa_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.BioMFA"
         tools:targetApi="31">
@@ -18,13 +18,18 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name=".InfoActivity"
+            android:theme="@style/Theme.BioMFA"
+            android:exported="true" />
+
+        <activity
+            android:name=".ScanRfidActivity"
+            android:theme="@style/Theme.BioMFA"
             android:exported="true" />
 
     </application>
