--- a/BioMFA_Mobile/app/src/main/AndroidManifest.xml
+++ b/BioMFA_Mobile/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -28,7 +31,15 @@
 
         <activity
             android:name=".ScanRfidActivity"
-            android:exported="true" />
+            android:label="Scan RFID Tag"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".ShowDataActivity"
+            android:label="Scanned Data"
+            android:exported="true">
+        </activity>
 
     </application>
 
