--- a/BioMFA_Mobile/app/src/main/AndroidManifest.xml
+++ b/BioMFA_Mobile/app/src/main/AndroidManifest.xml
@@ -26,8 +26,19 @@
         </activity>
 
         <activity
+                android:name=".TypeCodeActivity"
+                android:exported="true">
+        </activity>
+
+        <activity
+                android:name=".ScanImplantActivity"
+                android:exported="true">
+        </activity>
+
+        <activity
             android:name=".InfoActivity"
-            android:exported="true" />
+            android:exported="true">
+        </activity>
 
         <activity
             android:name=".ScanRfidActivity"
