--- a/BioMFA_Mobile/app/build.gradle
+++ b/BioMFA_Mobile/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
 
+    implementation 'com.neovisionaries:nv-websocket-client:2.3'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
